<resources>
    <string name="app_name">Simple-Schedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_prev">Previous</string>
    <string name="action_current">Current</string>
    <string name="action_next">Next</string>
    <string name="action_info">About</string>
    <string name="title_activity_settings">Settings</string>

    <string name="text_choose_group">Please, choose your group first</string>

    <string name="settings_theme_title">Dark Theme</string>
    <string name="settings_theme_subtitle">Change theme to dark</string>

    <string name="settings_group_title">Choose your group</string>
    <string name="settings_group_subtitle">Please, select your group</string>

    <string name="settings_language_title">Language</string>
    <string name="settings_language_subtitle">Select default language</string>


</resources>
